k8s-manifests/apps/mytest-apps/sample-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    app: guestbook-ui
  name: guestbook-ui
  namespace: sample-app
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 80
  selector:
    app: guestbook-ui
  type: NodePort
